# legged_rl_lab

./: .gitignore  .gitmodules  =2.0  ATEC线上赛环境测试需求.md  Instruction_CN.md  MUJOCO_LOG.TXT  README.md  fix_export.py  fix_export_2.py  fix_export_3.py  parse_train.py  patch_play.py  patch_play_2.py  patch_play_3.py  patch_play_4.py  patch_play_5.py  patch_play_6.py  patch_play_7.py  patch_play_final.py  test_load.py  update_readme.py
.git.broken/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git.broken/objects/pack/: pack-4a82920dfa8c3983aa6c44254f72033ac3fc6b75.idx
.history/: HETEROGENEOUS_TRAINING_GUIDE_20260201184123.md  Instruction_CN_20260120190801.md  Instruction_CN_20260123151957.md  Instruction_CN_20260201165043.md  README_20260120115715.md  README_20260124131619.md  README_20260126154832.md  README_20260126154841.md  README_20260126231812.md  README_20260126234546.md  README_20260126234605.md  README_20260126234628.md  README_20260127133736.md  README_20260128004749.md  README_20260128004802.md  README_20260128031713.md  README_20260129015340.md  README_20260131014906.md  README_20260201021426.md  README_20260201021431.md  README_20260201021438.md  README_20260208222534.md  README_20260208222539.md  README_20260208222839.md  README_20260208223251.md  README_20260208223509.md  README_20260208223613.md  README_20260208223622.md  README_20260208223702.md  README_20260208223730.md  README_20260208223754.md  README_20260208223803.md  README_20260208223934.md  README_20260208223941.md  README_20260208223946.md  README_20260208224014.md  README_20260208224023.md  README_20260208224153.md  README_20260209163231.md  README_20260209163234.md  (+4 more)
.history/deploy/: sim2sim_walk_20260126233049.py
.history/deploy/config/: go1_walk_20260126233059.yaml
.history/metamorphosis/scripts/: batch_generate_usd_20260208004452.py
.history/scripts/rsl_rl/: play_20260120164823.py  play_20260201092059.py
deploy/: README.md  joystick.py  locomotion_policy_wrapper.py  play_mujoco.py  requirements.txt  sim2sim.py  sim2sim_template.py  sim2sim_walk.py
deploy/assets/go1/: go1.xml
deploy/config/: go1.yaml  go1_handstand.yaml
deploy/exported_policy/go1/: policy_1.pt  policy_45_continus.pt
deploy/g1_deploy/: README.md  config.py  deploy.py  readme_cn.md  sim2real_amp.py  sim2real_mimic.py  sim2real_walk.py  sim2sim_mimic.py  sim2sim_sdk2_bridge.py  sim2sim_walk.py
deploy/g1_deploy/assets/: scene_terrain.xml
deploy/g1_deploy/common/: command_helper.py  remote_controller.py  rotation_helper.py  sdk2_mujoco_bridge.py
deploy/g1_deploy/config/: g1.yaml  g1_amp.yaml  g1_mimic.yaml  g1_walk.yaml
deploy/g1_deploy/exported_policy/: g1_flat_1.onnx  g1_flat_5.pt  g1_rough_1.pt  g1_rough_5.pt  g1_run.onnx  policy.pt  policy_new.pt
deploy/g1_deploy/g1_cpp/: CMakeLists.txt  g1_cpp.md
deploy/g1_deploy/g1_cpp/include/g1_cpp/: controllers.hpp  sim2real_controller.hpp
deploy/g1_deploy/g1_cpp/src/: controllers.cpp  sim2real_amp.cpp  sim2real_controller.cpp  sim2real_mimic.cpp  sim2real_walk.cpp  sim2sim_sdk2_bridge.cpp
deploy/g1_deploy/unitree_sdk2_python/: README.md
deploy/go1_deploy/: README.md  real2sim.py  sim2real_walk.py  sim2sim_handstand.py  sim2sim_walk.py
deploy/go1_deploy/assets/: go1.xml  go1_.xml  scene.xml
deploy/go2_deploy/: sim2real_walk.py  sim2sim_walk.py
deploy/utils/: joystick.py  test_joystick.py
metamorphosis/: LICENSE  PARAMS.md  README.md  pyproject.toml
metamorphosis/scripts/: 0_single.py  2_export.py  biped_scene.py  quadruped_scene.py  quadwheel_scene.py
metamorphosis/src/metamorphosis/: asset_cfg.py
metamorphosis/src/metamorphosis/builder/: __init__.py  base.py  biped.py  quadruped.py  quadwheel.py
metamorphosis/src/metamorphosis/utils/: mjs_utils.py  usd_utils.py
scripts/: csv_to_npz.py  list_envs.py  random_agent.py  replay_npz.py  zero_agent.py
scripts/amp/: play.py  record_reference_motion.py  train.py  verify_joint_order.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: cli_args.py  export_ts_depth_policy.py  play.py  play_cross_embodied_dual.py  play_cross_embodied_shared.py  train.py  train_cross_embodied_dual.py  train_cross_embodied_shared.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
scripts/tools/: convert_mjcf.py  convert_urdf.py  exported_mjcf.py
scripts/tracking/: play.py  train.py
source/legged_rl_lab/: setup.py
(+571 files in other folders)
